[project]
name = "amhs-sjtu"
version = "1.0.3.1"
description = "A simple python package for AMHS"
authors = [
    { name = "cflab", email = "" },
]
dependencies = [
    'fastapi',
    'uvicorn',
    'pandas',
    'networkx',
    'oracledb',
    "redis=5.0.5",  
    "redis-py-cluster",
    "pyyaml",
    "loguru"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amhs"]